Introduce GradebookSpreadsheet.prototype.ensureCellIsVisible to ensure a cell is not impeded by a fixed header/column - this is now called upon focus AND when our custom keyboard navigation overrides the standard behaviour,  Also move the fixed headers to above the table so they aren't in the tab index as the user tabs below the table.

--- a/tool/src/webapp/styles/gradebook-grades.css
+++ b/tool/src/webapp/styles/gradebook-grades.css
@@ -110,8 +110,14 @@
 #gradebookGrades .gb-fixed-column-table {
   position: absolute;
   border-collapse: collapse;
-  box-shadow: 1px 1px 3px #AAA;
+  box-shadow: 1px 1px 1px #AAA;
   width: auto;
+}
+#gradebookGrades .gb-fixed-header-table {
+  z-index: 20;
+}
+#gradebookGrades .gb-fixed-column-table {
+  z-index: 10;
 }
 #gradebookGrades .gb-fixed-column-table.table-striped > tbody > tr:nth-of-type(even) {
   background-color: white;
